--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,38 +1,27 @@
-<h1>Change Detection Comparison</h1>
+<h1>With/Without async pipe comparison</h1>
 
 <label *ngFor="let option of currentViewOptions">
-  <input type="radio" [checked]="currentView === option" (click)="currentView = option"> {{ option }}
+  <input type="radio" [checked]="currentView === option" (click)="setCurrentView(option)"> {{ option }}
 </label>
 
-<div *ngIf="currentView === 'default'">
-  <h2>ChangeDetectionStrategy.Default</h2>
+<div *ngIf="currentView === 'sync'">
+  <h2>Synchronous (without async pipe)</h2>
 
-  <demo-cd-default
+  <demo-sync
     [treeLevel]="treeLevel"
     [secondTreeLevel]="secondTreeLevel"
     [payload]="payload"
     >
-  </demo-cd-default>
+  </demo-sync>
 </div>
 
-<div *ngIf="currentView === 'on-push'">
-  <h2>ChangeDetectionStrategy.OnPush</h2>
+<div *ngIf="currentView === 'async'">
+  <h2>Asynchronous (with async pipe)</h2>
 
-  <demo-cd-on-push
+  <demo-async
     [treeLevel]="treeLevel"
     [secondTreeLevel]="secondTreeLevel"
     [payload]="payload"
     >
-  </demo-cd-on-push>
-</div>
-
-<div *ngIf="currentView === 'detached'">
-  <h2>ChangeDetectionStrategy.Default with `this.cdRef.detach()`</h2>
-
-  <demo-cd-detached
-    [treeLevel]="treeLevel"
-    [secondTreeLevel]="secondTreeLevel"
-    [payload]="payload"
-    >
-  </demo-cd-detached>
+  </demo-async>
 </div>
