--- a/src/app/demo-async/demo-async.component.html
+++ b/src/app/demo-async/demo-async.component.html
@@ -1,7 +1,10 @@
 <div style="border: 1px solid black; padding: 5px">
-  <strong>demo-cd-detached</strong>, treeLevel: {{ treeLevel }}<br />
+  <strong>demo-async</strong>, treeLevel: {{ treeLevel }}<br />
   payload: {{ payload }}<br />
-  internalPayload: {{ internalPayload }}<br />
+  internalPayload: {{ internalPayload$ | async }}<br />
+  internalPayload: {{ internalPayload$ | async }}<br />
+  internalPayload: {{ internalPayload$ | async }}<br />
+  internalPayload x2: {{ (internalPayload$ | async) + (internalPayload$ | async) }}<br />
   time: {{ time }}<br />
   thisRenderCount: {{ thisRenderCount }}<br />
   globalRenderCounts: {{ globalRenderCounts | json }}<br />
@@ -19,25 +22,25 @@
 
   <div style="display: flex">
     <div style="flex: 1">
-      <demo-cd-on-push
+      <demo-async
         *ngIf="treeLevel > 0"
         [treeLevel]="treeLevel-1"
         [secondTreeLevel]="secondTreeLevel-1"
-        [payload]="payload + internalPayload"
+        [payload]="payload + (internalPayload$ | async)"
         >
-      </demo-cd-on-push>
+      </demo-async>
     </div>
 
     <div
       *ngIf="secondTreeLevel > 0"
       style="flex: 1">
-      <demo-cd-on-push
+      <demo-async
         *ngIf="treeLevel > 0"
         [treeLevel]="treeLevel-1"
         [secondTreeLevel]="secondTreeLevel-1"
-        [payload]="payload + internalPayload"
+        [payload]="payload + (internalPayload$ | async)"
         >
-      </demo-cd-on-push>
+      </demo-async>
     </div>
   </div>
 </div>
